LU-7975 lod: fix delayed stripe error path & MDS resend

This patch is a follow-on to LU-4260/LU-4971/LU-5346 to fix
cleanup in error path during layout/stripe creation.
It is intended to fix special case when layout creation has been
delayed and will be with a non-0 size (ie truncate).

Problem has been unveiled due to the current limitation where a
delayed layout creation with a non-0 size/truncate will not be
resent if connection with OST is down, but is rather returning
-EAGAIN/-EWOULDBLOCK upon next open, and finally MDS will crash for
"(lod_object.c:700:lod_ah_init()) ASSERTION( lc->ldo_stripenr == 0 )"
LBUG.

Patch also fixes this limitation and allows delayed layout creation
with a non-0 size to be resent upon OST communication error/delay
instead of returning error upon open().

Specific sanity/test_27[F,G] sub-tests have been created to test
layout creation error path correct cleanup and non-0 sized resend.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: Ic4c669782d1faa43fd17aa6af82231211f8c9cb7